change meta_servers config

--- a/replication/rrdb_cluster/config.ini
+++ b/replication/rrdb_cluster/config.ini
@@ -103,5 +103,5 @@ is_trace = false
 [task.LPC_BEACON_CHECK]
 is_trace = false
 
-[replication.meta_servers]
-127.0.0.1:34601
+[meta_server]
+server_list = 127.0.0.1:34601
