--- a/replication/src/perf-config.ini
+++ b/replication/src/perf-config.ini
@@ -146,8 +146,8 @@ rpc_call_channel = RPC_CHANNEL_UDP
 is_trace = false
 
 
-[replication.meta_servers]
-localhost:34601
+[meta_server]
+server_list = 127.0.0.1:34601,127.0.0.1:34602,127.0.0.1:34603
 
 [replication.app]
 max_replica_count = 3
