--- a/replication/config-server.ini
+++ b/replication/config-server.ini
@@ -109,16 +109,12 @@ is_trace = false
 is_trace = false
 
 [meta_server]
+server_list = @LOCAL_IP@:34601,@LOCAL_IP@:34602,@LOCAL_IP@:34603
 cluster_root = /pegasus/tc
 meta_state_service_type = meta_state_service_zookeeper
 meta_state_service_parameters =
 distributed_lock_service_type = distributed_lock_service_zookeeper
 distributed_lock_service_parameters = /pegasus/tc/lock
-
-[replication.meta_servers]
-@LOCAL_IP@:34601
-@LOCAL_IP@:34602
-@LOCAL_IP@:34603
 
 [replication.app]
 max_replica_count = 3
