--- a/replication/src/vconfig.ini
+++ b/replication/src/vconfig.ini
@@ -132,8 +132,8 @@ is_trace = false
 is_trace = false
 
 
-[replication.meta_servers]
-localhost:%meta_port%
+[meta_server]
+server_list = localhost:%meta_port%
 
 [replication.app]
 app_name = rrdb.instance0 
