--- a/replication/config-server.ini
+++ b/replication/config-server.ini
@@ -109,7 +109,7 @@ is_trace = false
 is_trace = false
 
 [meta_server]
-server_list = @LOCAL_IP@:34601,@LOCAL_IP@:34602,@LOCAL_IP@:34603
+server_list = @LOCAL_IP@:34601, @LOCAL_IP@:34602, @LOCAL_IP@:34603
 cluster_root = /pegasus/tc
 meta_state_service_type = meta_state_service_zookeeper
 meta_state_service_parameters =
@@ -167,7 +167,7 @@ lb_interval_ms = 10000
 rocksdb_write_buffer_size = 10485760
 
 [zookeeper]
-hosts_list = localhost:12181
+hosts_list = 127.0.0.1:12181
 timeout_ms = 10000
 logfile = zoo.log
 
