add hash_op in rrdb_cluster tool

--- a/replication/rrdb_cluster/CMakeLists.txt
+++ b/replication/rrdb_cluster/CMakeLists.txt
@@ -10,7 +10,7 @@ set(MY_PROJ_SRC "")
 # "GLOB" for non-recursive search
 set(MY_SRC_SEARCH_MODE "GLOB")
 
-set(MY_PROJ_INC_PATH "../../include" "../client_lib/include")
+set(MY_PROJ_INC_PATH "../../include" "../client_lib/include" "../client_lib/src" "../src")
 
 set(MY_PROJ_LIBS 
     dsn.replication.ddlclient
