improve rrdb_cluster tool

--- a/replication/config-client.ini
+++ b/replication/config-client.ini
@@ -27,10 +27,15 @@ cli_remote = false
 start_nfs = false
 
 logging_start_level = LOG_LEVEL_DEBUG
-;logging_factory_name = dsn::tools::simple_logger
+logging_factory_name = dsn::tools::simple_logger
 ;logging_factory_name = dsn::tools::screen_logger
 
 enable_default_app_mimic = true
+
+[tools.simple_logger]
+short_header = false
+fast_flush = true
+stderr_start_level = LOG_LEVEL_ERROR
 
 [tools.simulator]
 random_seed = 0
