--- a/replication/config-client.ini
+++ b/replication/config-client.ini
@@ -16,7 +16,8 @@ delay_seconds = 30
 
 [core]
 ;tool = simulator
-tool = fastrun
+;tool = fastrun
+tool = nativerun
 ;toollets = tracer
 ;toollets = tracer, profiler, fault_injector
 pause_on_start = false
