--- a/replication/config-server.ini
+++ b/replication/config-server.ini
@@ -37,11 +37,13 @@ cli_remote = false
 start_nfs = true
 
 logging_start_level = LOG_LEVEL_DEBUG
-logging_factory_name = dsn::tools::hpc_logger
+logging_factory_name = dsn::tools::simple_logger
 ;logging_factory_name = dsn::tools::screen_logger
 
 [tools.simple_logger]
 short_header = false
+fast_flush = true
+stderr_start_level = LOG_LEVEL_ERROR
 
 [tools.simulator]
 random_seed = 0
