add meta_count and replica_count option in start_onebox tool

--- a/replication/config-server.ini
+++ b/replication/config-server.ini
@@ -12,7 +12,7 @@ arguments =
 ports = 34601
 pools = THREAD_POOL_DEFAULT, THREAD_POOL_REPLICATION, THREAD_POOL_META_SERVER, THREAD_POOL_FD, THREAD_POOL_DLOCK
 run = true
-count = 3
+count = @META_COUNT@
 
 [apps.replica]
 name = replica
@@ -21,7 +21,7 @@ arguments =
 ports = 34801
 pools = THREAD_POOL_DEFAULT, THREAD_POOL_REPLICATION, THREAD_POOL_LOCAL_APP, THREAD_POOL_REPLICATION_LONG, THREAD_POOL_FD
 run = true
-count = 3
+count = @REPLICA_COUNT@
 
 [core]
 ;tool = simulator
