--- a/replication/src/config.ini
+++ b/replication/src/config.ini
@@ -4,72 +4,105 @@ count = 1
 ;network.client.RPC_CHANNEL_TCP = dsn::tools::sim_network_provider, 65536
 ;network.client.RPC_CHANNEL_UDP = dsn::tools::sim_network_provider, 65536
 ;network.server.0.RPC_CHANNEL_TCP = NET_HDR_DSN, dsn::tools::sim_network_provider, 65536
+;network.server.0.RPC_CHANNEL_UDP = NET_HDR_DSN, dsn::tools::sim_network_provider, 65536
+
 
 [apps.meta]
-name = meta
+
 type = meta
+dmodule = dsn.meta_server
 arguments = 
 ports = 34601
-pools = THREAD_POOL_DEFAULT, THREAD_POOL_REPLICATION, THREAD_POOL_META_SERVER, THREAD_POOL_FD, THREAD_POOL_DLOCK
 run = true
-count = 3
-
-[apps.replica]
-name = replica
-type = replica
+count = 1 
+pools = THREAD_POOL_DEFAULT,THREAD_POOL_META_SERVER,THREAD_POOL_FD
+    
+[apps.rrdb]
+type = server
 arguments =
 ports = 34801
-pools = THREAD_POOL_DEFAULT, THREAD_POOL_REPLICATION, THREAD_POOL_LOCAL_APP, THREAD_POOL_REPLICATION_LONG, THREAD_POOL_FD
+run = true
+count = 0
+pools = THREAD_POOL_DEFAULT
+
+[apps.replica]
+type = replica
+dmodule = dsn.layer2.stateful.type1
+arguments =
+ports = 34801
 run = true
 count = 3
+pools = THREAD_POOL_DEFAULT,THREAD_POOL_REPLICATION_LONG,THREAD_POOL_REPLICATION,THREAD_POOL_FD,THREAD_POOL_LOCAL_APP
+
+hosted_app_type_name = server
+hosted_app_arguments = 
+
+[apps.client]
+
+type = client
+arguments = dsn://mycluster/rrdb.instance0
+run = true
+count = 0
+pools = THREAD_POOL_DEFAULT
+
+[apps.client.perf.rrdb]
+type = client.perf.rrdb
+arguments = dsn://mycluster/rrdb.instance0
+run = true
+count = 1
+pools = THREAD_POOL_DEFAULT
+exit_after_test = true
+delay_seconds = 20
+
+[tools.hpc_tail_logger]
+per_thread_buffer_bytes = 2048000
 
 [core]
-;tool = simulator
-;tool = fastrun
-tool = nativerun
-;toollets = tracer
-;toollets = tracer, profiler, fault_injector
-pause_on_start = false
-cli_local = false
-cli_remote = false
-
-;aio_factory_name = dsn::tools::native_aio_provider
 start_nfs = true
 
-logging_start_level = LOG_LEVEL_DEBUG
-logging_factory_name = dsn::tools::hpc_logger
-;logging_factory_name = dsn::tools::screen_logger
+;tool = simulator
+;tool = nativerun
+tool = fastrun
+;toollets = tracer
+;toollets = fault_injector
+;toollets = tracer, fault_injector
+;toollets = tracer, profiler, fault_injector
+;toollets = profiler, fault_injector
+pause_on_start = false
+cli_local = true
 
-[tools.simple_logger]
-short_header = false
+;logging_start_level = LOG_LEVEL_WARNING
+;logging_factory_name = dsn::tools::screen_logger
+;logging_factory_name = dsn::tools::hpc_tail_logger
+;logging_factory_name = dsn::tools::hpc_logger
+;aio_factory_name = dsn::tools::empty_aio_provider
 
 [tools.simulator]
 random_seed = 0
+;min_message_delay_microseconds = 0
+;max_message_delay_microseconds = 0
 
 [network]
 ; how many network threads for network library(used by asio)
-io_service_worker_count = 4
+io_service_worker_count = 2
 
 ; specification for each thread pool
 [threadpool..default]
-worker_count = 4
+worker_count = 2
+worker_priority = THREAD_xPRIORITY_LOWEST
 
 [threadpool.THREAD_POOL_DEFAULT]
 name = default
 partitioned = false
 max_input_queue_length = 1024
-worker_priority = THREAD_xPRIORITY_NORMAL
-worker_count = 4
+worker_priority = THREAD_xPRIORITY_LOWEST
 
 [threadpool.THREAD_POOL_REPLICATION]
 name = replication
 partitioned = true
-;max_input_queue_length = 8192
-worker_priority = THREAD_xPRIORITY_NORMAL
-worker_count = 2
-
-[threadpool.THREAD_POOL_DLOCK]
-partitioned = true
+max_input_queue_length = 2560
+worker_priority = THREAD_xPRIORITY_LOWEST
+queue_length_throttling_threshold = 10000
 
 [task..default]
 is_trace = false
@@ -77,101 +110,112 @@ is_profile = false
 allow_inline = false
 rpc_call_channel = RPC_CHANNEL_TCP
 fast_execution_in_network_thread = false
-rpc_call_header_format_name = dsn
+rpc_message_header_format = dsn
 rpc_timeout_milliseconds = 5000
+rpc_message_delay_ms_min = 1
+rpc_message_delay_ms_max = 1000
 
 disk_write_fail_ratio = 0.0
-disk_read_fail_ratio = 0.0
+disk_read_fail_ratio = 0.00001
 
-perf_test_rounds = 1000
-perf_test_payload_bytes = 1024
-perf_test_timeouts_ms = 10000
-; perf_test_concurrent_count is used only when perf_test_concurrent is true:
-;   - if perf_test_concurrent_count == 0, means concurrency grow exponentially.
-;   - if perf_test_concurrent_count >  0, means concurrency maintained to a fixed number.
-perf_test_concurrent = true
-perf_test_concurrent_count = 20
+perf_test_seconds = 30
+perf_test_key_space_size = 1000
+perf_test_concurrency = 8,80
+perf_test_payload_bytes = 102,1024,51200
+perf_test_timeouts_ms = 1000
 
 [task.LPC_AIO_IMMEDIATE_CALLBACK]
 is_trace = false
 allow_inline = false
+disk_write_fail_ratio = 0.0
 
 [task.LPC_RPC_TIMEOUT]
 is_trace = false
 
+[task.LPC_CHECKPOINT_REPLICA]
+;execution_extra_delay_us_max = 10000000
+
+[task.LPC_LEARN_REMOTE_DELTA_FILES]
+;execution_extra_delay_us_max = 10000000
+
 [task.RPC_FD_FAILURE_DETECTOR_PING]
 is_trace = false
+rpc_call_channel = RPC_CHANNEL_UDP
 
 [task.RPC_FD_FAILURE_DETECTOR_PING_ACK]
 is_trace = false
+rpc_call_channel = RPC_CHANNEL_UDP
 
 [task.LPC_BEACON_CHECK]
 is_trace = false
 
-[meta_server]
-cluster_root = /pegasus/tc
-meta_state_service_type = meta_state_service_zookeeper
-meta_state_service_parameters =
-distributed_lock_service_type = distributed_lock_service_zookeeper
-distributed_lock_service_parameters = /pegasus/tc/lock
+[task.RPC_PREPARE]
+rpc_request_resend_timeout_milliseconds = 8000
 
-[replication.meta_servers]
-10.235.114.34:34601
-10.235.114.34:34602
-10.235.114.34:34603
+[task.LPC_DAEMON_APPS_CHECK_TIMER]
+is_trace = false
+
+[meta_server]
+min_live_node_count_for_unfreeze = 1
+
+[uri-resolver.dsn://mycluster]
+factory = partition_resolver_simple
+arguments = localhost:34601
+
+[meta_servers]
+localhost:34601
 
 [replication.app]
-max_replica_count = 3
+app_name = rrdb.instance0 
+app_type = rrdb 
 partition_count = 1
-app_name = rrdb.instance0
-app_type = rrdb
+max_replica_count = 3
+stateful = true
+package_id = 
+
 
 [replication]
-prepare_timeout_ms_for_secondaries = 1000
-prepare_timeout_ms_for_potential_secondaries = 3000
 
-batch_write_disabled = false
+prepare_timeout_ms_for_secondaries = 10000
+prepare_timeout_ms_for_potential_secondaries = 20000
+
+learn_timeout_ms = 30000
 staleness_for_commit = 20
-max_mutation_count_in_prepare_list = 110
+staleness_for_start_prepare_for_potential_secondary = 110
+mutation_max_size_mb = 15
+mutation_max_pending_time_ms = 20
 mutation_2pc_min_replica_count = 2
 
+prepare_list_max_size_mb = 250
+request_batch_disabled = false
+group_check_internal_ms = 100000
 group_check_disabled = false
-group_check_interval_ms = 100000
-
-checkpoint_disabled = false
-checkpoint_interval_seconds = 100
-checkpoint_min_decree_gap = 10000
-checkpoint_max_interval_hours = 24
-
-gc_disabled = false
-gc_interval_ms = 30 * 1000
-gc_memory_replica_interval_ms = 5 * 60 * 1000
-gc_disk_error_replica_interval_seconds = 48 * 3600 * 1000
-
 fd_disabled = false
 fd_check_interval_seconds = 5
 fd_beacon_interval_seconds = 3
-fd_lease_seconds = 10
+fd_lease_seconds = 14
 fd_grace_seconds = 15
+working_dir = .
+log_buffer_size_mb = 1
+log_pending_max_ms = 100
+log_file_size_mb = 32
+log_batch_write = true
 
-log_private_disabled = false
-log_private_file_size_mb = 32
-log_private_batch_buffer_kb = 4
-log_private_force_flush = true
+log_enable_shared_prepare = true
+log_enable_private_commit = false
 
-log_shared_file_size_mb = 32
-log_shared_batch_buffer_kb = 0
-log_shared_force_flush = false
+config_sync_interval_ms = 60000
 
-config_sync_disabled = false
-config_sync_interval_ms = 30000
-
-lb_interval_ms = 10000
-
-rocksdb_write_buffer_size = 10485760
-
-[zookeeper]
-hosts_list = 10.235.114.34:2181
-timeout_ms = 10000
-logfile = zoo.log
-
+[task.RPC_RRDB_RRDB_PUT]
+rpc_request_is_write_operation = true
+rpc_request_throttling_mode = TM_DELAY
+rpc_request_delays_milliseconds = 1000, 1000, 1000, 1000, 1000, 10000
+[task.RPC_RRDB_RRDB_DELETE]
+rpc_request_is_write_operation = true
+rpc_request_throttling_mode = TM_DELAY
+[task.RPC_RRDB_RRDB_MERGE]
+rpc_request_is_write_operation = true
+rpc_request_throttling_mode = TM_DELAY
+[task.RPC_RRDB_RRDB_GET]
+rpc_request_is_write_operation = false
+rpc_request_throttling_mode = TM_DELAY
