rise rrdb default threadpool worker_priority to normal in the config(new)

--- a/replication/src/config.ini
+++ b/replication/src/config.ini
@@ -89,19 +89,19 @@ io_service_worker_count = 2
 ; specification for each thread pool
 [threadpool..default]
 worker_count = 2
-worker_priority = THREAD_xPRIORITY_LOWEST
+worker_priority = THREAD_xPRIORITY_NORMAL
 
 [threadpool.THREAD_POOL_DEFAULT]
 name = default
 partitioned = false
 max_input_queue_length = 1024
-worker_priority = THREAD_xPRIORITY_LOWEST
+worker_priority = THREAD_xPRIORITY_NORMAL
 
 [threadpool.THREAD_POOL_REPLICATION]
 name = replication
 partitioned = true
 max_input_queue_length = 2560
-worker_priority = THREAD_xPRIORITY_LOWEST
+worker_priority = THREAD_xPRIORITY_NORMAL
 queue_length_throttling_threshold = 10000
 
 [task..default]
@@ -213,9 +213,12 @@ rpc_request_delays_milliseconds = 1000, 1000, 1000, 1000, 1000, 10000
 [task.RPC_RRDB_RRDB_DELETE]
 rpc_request_is_write_operation = true
 rpc_request_throttling_mode = TM_DELAY
+rpc_request_delays_milliseconds = 1000, 1000, 1000, 1000, 1000, 10000
 [task.RPC_RRDB_RRDB_MERGE]
 rpc_request_is_write_operation = true
 rpc_request_throttling_mode = TM_DELAY
+rpc_request_delays_milliseconds = 1000, 1000, 1000, 1000, 1000, 10000
 [task.RPC_RRDB_RRDB_GET]
 rpc_request_is_write_operation = false
 rpc_request_throttling_mode = TM_DELAY
+rpc_request_delays_milliseconds = 1000, 1000, 1000, 1000, 1000, 10000
